--- a/examples/Dockerfile
+++ b/examples/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.5.2
 
+RUN apt-get update            && \
+    apt-get -y install cmake
+
 RUN pip install --upgrade pip && \
     pip --version             && \
     pip install autopep8      && \
