--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,7 @@ before_script:
 
 script:
     - cat makefile
+    - cat examples/makefile
+    - cat projects/collatz/makefile
     - make versions
     - make travis
