--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
    - "3.5"
 
 before_install:
+    - pip --version
+    - pip3 --version
+    - pip3.5 --version
     - cat .travis.yml
     - pip install --upgrade pip
 
